fixed misalignment issue

--- a/src/stylesheets/exerciselist.scss
+++ b/src/stylesheets/exerciselist.scss
@@ -64,8 +64,7 @@
 .exercise-rows {
   #exercise-img {
     padding: 10px;
-    min-width: 25%;
-    max-width: 35%;
+    width: 25%;
   }
   #exercise-info {
     padding: 10px;
@@ -84,8 +83,7 @@
 
 .exercise-rows {
   #exercise-img {
-    min-width: 100%;
-    max-width: 100%;
+    width: 100%;
   }
   #exercise-info {
     width: 100%;
